--- a/todo.txt
+++ b/todo.txt
@@ -4,10 +4,13 @@
       google auth fields.  Those will go to the login controller that will use a dummy password and the google 
       email if the token is present.  Otherwise, it will try the given password and email.
 [] add in auth levels ( 1 - guest, 2 - logged in normal user, 3 - UA login? , 5 - event admin, 9 - app admin) 
-[]  update tracks to use auth levels and to have delete confirmation
+[x]  update tracks to use auth levels and to have delete confirmation
  -- add remaining components
- [] Venues
- [] Slots
- [] Events
+ [] Venues (needs fixes)
+ [x] Slots
+ [x] Events
  [] Sessions
+ [] schedules
 [] main registration controller (for building Schedule objects)
+[] add new policies to keep from going straight to edit or delete pages (tokens?)
+[] fix the menu spacing
