update privs for storage folder

--- a/todo.txt
+++ b/todo.txt
@@ -13,5 +13,5 @@
  [] schedules
 [] main registration controller (for building Schedule objects)
 [] add new policies to keep from going straight to edit or delete pages (tokens?)
-[] fix the menu spacing
-[] add button to open/close 'New track/venue/slot/etc' sections.  Maybe a button to open the titlebox??
+[x] fix the menu spacing
+[x] add button to open/close 'New track/venue/slot/etc' sections.  Maybe a button to open the titlebox??
